--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile project(':banner')
+    compile 'com.zhy:magic-viewpager:1.0.1'
 }
