--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"></activity>
-<activity android:name=".message.fragment.MessageReleaseActivity"/>
+        <activity android:name=".message.fragment.activity.MessageListActivity"/>
 
     </application>
 
