--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".message.fragment.activity.MessageListActivity"/>
-
+        <activity android:name=".message.fragment.activity.MessageReleaseActivity"/>
     </application>
 
 </manifest>
